--- a/index.html
+++ b/index.html
@@ -1,96 +1,105 @@
 
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Free Sugar Pro - Natuurlijke Bloedsuiker Ondersteuning</title>
+  <title>Free Sugar Pro - Natural Blood Sugar Support</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f7f8;
-      color: #333;
+      background: linear-gradient(to right, #f9f9f9, #e3f2fd);
+      color: #2d3436;
     }
     .header {
-      background: #27ae60;
+      background: linear-gradient(to right, #00b894, #55efc4);
       color: white;
-      padding: 40px 20px;
+      padding: 50px 20px;
       text-align: center;
     }
     .container {
-      padding: 20px;
+      padding: 30px 20px;
       max-width: 1000px;
       margin: auto;
       background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
     .image {
       text-align: center;
-      margin: 20px 0;
+      margin: 30px 0;
     }
     .image img {
       max-width: 300px;
     }
     h1, h2, h3 {
-      color: #2c3e50;
+      color: #0984e3;
     }
     ul {
       line-height: 1.8;
+      list-style-type: "✅ ";
+      padding-left: 20px;
     }
     .cta {
       text-align: center;
-      margin: 30px 0;
+      margin: 40px 0;
     }
     .cta a {
-      background: #e67e22;
+      background: #fd79a8;
       color: white;
-      padding: 15px 25px;
+      padding: 15px 30px;
       text-decoration: none;
-      font-size: 18px;
-      border-radius: 8px;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 10px;
+      transition: background 0.3s ease;
+    }
+    .cta a:hover {
+      background: #e84393;
     }
     .footer {
       text-align: center;
       font-size: 14px;
-      color: #777;
+      color: #636e72;
       padding: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <div class="header">
     <h1>Free Sugar Pro™</h1>
-    <p>De natuurlijke manier om je bloedsuiker in balans te houden</p>
+    <p>The Natural Way to Keep Your Blood Sugar Balanced</p>
   </div>
 
   <div class="container">
-    <h2>Waarom kiezen voor Free Sugar Pro?</h2>
+    <h2>Why Choose Free Sugar Pro?</h2>
     <ul>
-      <li>✅ Reguleert je bloedsuiker op natuurlijke wijze</li>
-      <li>✅ Verlaagt suikercravings en eetlust</li>
-      <li>✅ Bevordert vetverbranding en gewichtsverlies</li>
-      <li>✅ Verhoogt energie en focus zonder crashes</li>
-      <li>✅ Wetenschappelijk ondersteunde ingrediënten</li>
-      <li>✅ 100% natuurlijk en veilig, geen bijwerkingen</li>
+      <li>Helps naturally regulate blood sugar levels</li>
+      <li>Reduces sugar cravings and appetite</li>
+      <li>Boosts fat burning and supports weight loss</li>
+      <li>Increases energy and mental focus</li>
+      <li>Scientifically backed natural ingredients</li>
+      <li>100% natural, safe, and free from side effects</li>
     </ul>
 
     <div class="image">
-      <img src="https://www.freesugarpro.com/images/product-bottle.png" alt="Free Sugar Pro Flesje">
+      <img src="https://www.freesugarpro.com/images/product-bottle.png" alt="Free Sugar Pro Bottle">
     </div>
 
-    <h2>Wat zit er in Free Sugar Pro?</h2>
-    <p>Een krachtige mix van natuurlijke ingrediënten waaronder Berberine, Cinnamon Bark, Alpha-Liponzuur, Gymnema Sylvestre, Banaba Leaf Extract en meer.</p>
+    <h2>What’s Inside Free Sugar Pro?</h2>
+    <p>Powerful blend of natural ingredients including Berberine, Cinnamon Bark, Alpha-Lipoic Acid, Gymnema Sylvestre, Banaba Leaf Extract, and more.</p>
 
-    <h2>Bestel vandaag nog!</h2>
+    <h2>Order Now!</h2>
     <div class="cta">
-      <a href="https://www.freesugarpro.com/" target="_blank">Bezoek de Officiële Website</a>
+      <a href="https://www.freesugarpro.com/" target="_blank">Visit the Official Website</a>
     </div>
   </div>
 
   <div class="footer">
-    &copy; 2025 Free Sugar Pro - Alle rechten voorbehouden
+    &copy; 2025 Free Sugar Pro - All rights reserved.
   </div>
 </body>
 </html>
